--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item) do %>
         <div class='item-img-content'>
           <%= image_tag url_for(item.image.variant(resize_to_limit:[295,295])), class:"item-image" if item.image.attached? %>
 
@@ -163,7 +163,7 @@
       <%# 商品がある場合は表示されないようにしましょう %>
       <% if @items.empty? %>
       <li class='list'>
-        <%= link_to item_path(item)  do %>
+        <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
         <div class='item-info'>
           <h3 class='item-name'>
